Fix css vertical alignment

--- a/dropgifs.css
+++ b/dropgifs.css
@@ -28,6 +28,7 @@ input:focus {
 
 li {
     display: inline-block;
+    vertical-align: middle;
     padding: 5px;
 }
 
